--- a/app/globals.css
+++ b/app/globals.css
@@ -52,8 +52,6 @@ body {
 }
 
 .hero {
-  width: 100%;
-  height: 120vh;
   background-image: url("/assets/hero.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,7 +92,7 @@ body {
 
 .hero-font {
   font-weight: 400;
-  line-height: 84px;
+  /* line-height: 84px; */
   letter-spacing: 0.08em;
   text-align: left;
 }
@@ -108,8 +106,6 @@ body {
 }
 
 .time-card {
-  width: 5rem;
-  height: 5rem;
   border-radius: 10px;
 }
 
@@ -124,8 +120,6 @@ body {
 
 .join {
   width: 100%;
-  height: 5rem;
-  border-radius: 200px;
   background-color: #fff;
   color: black;
 }
